--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "14.x"
   },
   "scripts": {
-    "start" : "nodemon server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
     "libreoffice-convert": "^1.4.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
+    "office-to-pdf": "^4.0.0",
     "path": "^0.12.7"
   }
 }
